// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doTree php Should build pot file 1`] = `
{
  "": {
    "Huge": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/php.php:252",
        "translator": undefined,
      },
      "msgid": "Huge",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "Large": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/php.php:247",
        "translator": undefined,
      },
      "msgid": "Large",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "Light green cyan to vivid green cyan": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/php.php:189",
        "translator": undefined,
      },
      "msgid": "Light green cyan to vivid green cyan",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "Luminous vivid amber to luminous vivid orange": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/php.php:194",
        "translator": undefined,
      },
      "msgid": "Luminous vivid amber to luminous vivid orange",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "Luminous vivid orange to vivid red": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/php.php:199",
        "translator": undefined,
      },
      "msgid": "Luminous vivid orange to vivid red",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "Regular": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/php.php:242",
        "translator": undefined,
      },
      "msgid": "Regular",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "Small": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/php.php:237",
        "translator": undefined,
      },
      "msgid": "Small",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "Vivid cyan blue to vivid purple": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/php.php:179",
        "translator": undefined,
      },
      "msgid": "Vivid cyan blue to vivid purple",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "Vivid green cyan to vivid cyan blue": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/php.php:184",
        "translator": undefined,
      },
      "msgid": "Vivid green cyan to vivid cyan blue",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "light grayish magenta": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/php.php:123",
        "translator": undefined,
      },
      "msgid": "light grayish magenta",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "sdasdasdasd": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/php.php:7",
        "translator": "ciao2!",
      },
      "msgid": "sdasdasdasd",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "strong magenta": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/php.php:118",
        "translator": undefined,
      },
      "msgid": "strong magenta",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "very dark gray": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/php.php:133",
        "translator": undefined,
      },
      "msgid": "very dark gray",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "very light gray": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/php.php:128",
        "translator": undefined,
      },
      "msgid": "very light gray",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
  },
}
`;

exports[`doTree php Should build pot file php 1`] = `
{
  "": {
    "Huge": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/sourcedir/file.php:252",
        "translator": undefined,
      },
      "msgid": "Huge",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "Large": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/sourcedir/file.php:247",
        "translator": undefined,
      },
      "msgid": "Large",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "Light green cyan to vivid green cyan": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/sourcedir/file.php:189",
        "translator": undefined,
      },
      "msgid": "Light green cyan to vivid green cyan",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "Luminous vivid amber to luminous vivid orange": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/sourcedir/file.php:194",
        "translator": undefined,
      },
      "msgid": "Luminous vivid amber to luminous vivid orange",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "Luminous vivid orange to vivid red": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/sourcedir/file.php:199",
        "translator": undefined,
      },
      "msgid": "Luminous vivid orange to vivid red",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "Regular": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/sourcedir/file.php:242",
        "translator": undefined,
      },
      "msgid": "Regular",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "Small": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/sourcedir/file.php:237",
        "translator": undefined,
      },
      "msgid": "Small",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "Vivid cyan blue to vivid purple": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/sourcedir/file.php:179",
        "translator": undefined,
      },
      "msgid": "Vivid cyan blue to vivid purple",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "Vivid green cyan to vivid cyan blue": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/sourcedir/file.php:184",
        "translator": undefined,
      },
      "msgid": "Vivid green cyan to vivid cyan blue",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "light grayish magenta": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/sourcedir/file.php:123",
        "translator": undefined,
      },
      "msgid": "light grayish magenta",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "sdasdasdasd": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/sourcedir/file.php:7",
        "translator": "ciao2!",
      },
      "msgid": "sdasdasdasd",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "strong magenta": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/sourcedir/file.php:118",
        "translator": undefined,
      },
      "msgid": "strong magenta",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "very dark gray": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/sourcedir/file.php:133",
        "translator": undefined,
      },
      "msgid": "very dark gray",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
    "very light gray": {
      "comments": {
        "comment": "",
        "extracted": "",
        "flag": "",
        "previous": "",
        "reference": "tests/fixtures/sourcedir/file.php:128",
        "translator": undefined,
      },
      "msgid": "very light gray",
      "msgid_plural": "themeLangDomain",
      "msgstr": [],
    },
  },
}
`;
